--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <section class="hero container">
     <div class="hero-text">
       <h1>Sewa Mobil Nyaman di Lombok</h1>
-      <p>Armada terbaik, supir profesional (opsional), dan layanan 24/7. Pilih mobil yang sesuai kebutuhanmu.</p>
+      <p>Armada terbaik, Driver ramah dan profesional, layanan 24/7. Pilih mobil yang sesuai kebutuhanmu.</p>
       <a class="btn" href="https://wa.me/6287788981304">Pesan Sekarang via WhatsApp</a>
     </div>
     <div class="hero-image"><img src="img/alphard-hitam.jpg" alt="Alphard Hitam" style="max-width:420px;border-radius:10px"></div>
